<resources>
    <string name="app_name">সিফাতুল্লার পাগলা এলার্ম</string>

    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">আমি ঘুম ভাঙ্গানিয়া পাখি,এসেছি তোমাদের ঘুম ভাঙ্গাতের।নতুন আলোয় ভুবন রাঙ্গাতে। উঠো উঠো উঠো সবাই। ওই গরিব শ্রমিকের বাচ্চারা খাটাস বস্তিবাসী নোয়াখাইল্লা।আমার পাগলা এলার্ম চাইলে নিচে বাটনে টিপ লাগা।আমি তোগোর জুতা মাইরা ঐ সময় জাগিয়ে তুলব</string>

    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">সময়</string>
    <string name="label">যা মনে চায় নিচে লিখে নোট করে রাখ যা এলার্মের সময় দেখাবো তোদের</string>
    <string name="days">Days</string>
    <string name="edit_alarm">এডিট কর এলার্ম</string>
    <string name="add_alarm">নতুন এলার্ম দে</string>
    <string name="add_label_hint"><font size="12">যেমন-আমি অপরাহ্নে মদ খাবো</font></string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Alarm</string>
    <string name="delete_dialog_content">তুই কি আসলেই এলার্ম ডিলেট করতে চাস হালারপুত ?</string>
    <string name="days_warn_content">ঐ হারামজাদা চোর কোথাকার। তুই দিন সিলেক্ট না করলে আমি তোরে ডাকবো কখন?যেকোন একটা দিন সিলেক্ট কর</string>
    <string name="days_warn_title">Select any day</string>

    <string name="yes">আইচ্ছা</string>
    <string name="no">না</string>

    <!-- Edit Alarm Menu -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="launch_main_activity">মেইন এপে যা</string>
    <string name="dismiss">থামা আমারে</string>

    <!-- Days -->
    <string name="monday">সোমবার</string>
    <string name="tuesday">মঙ্গলবার</string>
    <string name="wednesday">বুধবার</string>
    <string name="thursday">বৃহস্পতিবার</string>
    <string name="friday">শুক্রবার</string>
    <string name="saturday">শনিবার</string>
    <string name="sunday">রবিবার</string>


    <!-- AdMob ad unit IDs -->
    <string name="admob_app_id">ca-app-pub-3257446338349110~3320347813</string>
    <string name="banner_home_footer">ca-app-pub-3257446338349110/5113292701</string>
    <string name="interstitial_full_screen">ca-app-pub-3257446338349110/1581241809</string>

</resources>
